--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "Parsa.png"
   name             : "Parsa Dayli"
-  bio              : "biobio"
+  bio              : "no bio is a bio"
   location         : "Earth"
   employer         : "Göttingen University"
 
