--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "Parsa.png"
-  name             : "Parsa Dayli"
-  bio              : "no bio is a bio"
+  name             : "Parsa's personal web"
+  bio              : "Bioinformatician"
   location         : "Earth"
   employer         : "Göttingen University"
 
@@ -53,7 +53,7 @@ author:
 #  keybase          : # Username
 #  instagram        : # Username
 #  lastfm           : # Username
-#  linkedin         : # Username
+  linkedin         :  Parsa Hariri
 #  mastodon         : # URL
  # medium           : # URL
  # pinterest        : # Username
