--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
 #  keybase          : # Username
 #  instagram        : # Username
 #  lastfm           : # Username
-  linkedin         :  Parsa Hariri
+  linkedin         :  parsa-hariri
 #  mastodon         : # URL
  # medium           : # URL
  # pinterest        : # Username
