--- a/_config.yml
+++ b/_config.yml
@@ -202,7 +202,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  projects:
     output: true
     permalink: /:collection/:path/
   talks:
